# burst

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
benchmark/: CMakeLists.txt  input.hpp  io.hpp  k_ary_search_set.cpp  range_generator.cpp
benchmark/algorithm/: CMakeLists.txt  galloping_lower_bound.cpp  integer_sort_comparison.py  integer_sort_comparison.py.in  radix_sort.cpp
benchmark/burst/: CMakeLists.txt
benchmark/burst/algorithm/: CMakeLists.txt  galloping_lower_bound.cpp  integer_sort_comparison.py.in  radix_sort.cpp
benchmark/burst/container/: CMakeLists.txt  dynamic_tuple.cpp  dynamic_tuple_benchmark.py.in  k_ary_search_set.cpp
benchmark/burst/integer/: CMakeLists.txt  divceil.cpp
benchmark/burst/iterator/: CMakeLists.txt  intersect_iterator.cpp  merge_iterator.cpp  subset_iterator.cpp  variant_iterator.cpp
benchmark/container/: CMakeLists.txt  dynamic_tuple.cpp  dynamic_tuple_benchmark.py.in  k_ary_search_set.cpp
benchmark/include/random/: beta_distribution.hpp  urd_order_statistic_distribution.hpp
benchmark/include/utility/io/: generate.hpp  generate_many.hpp  generate_many_sorted.hpp  generate_sorted.hpp  read.hpp  read_many.hpp  write.hpp
benchmark/include/utility/io/detail/: generate_blockwise.hpp
benchmark/integer/: CMakeLists.txt  divceil.cpp
benchmark/iterator/: CMakeLists.txt  intersect_iterator.cpp  merge_iterator.cpp  subset_iterator.cpp
benchmark/src/: CMakeLists.txt  range_generator.cpp
benchmark/tools/: CMakeLists.txt  display.cpp  gen.cpp  range_generator.cpp
burst/: concept.hpp  rvalue.hpp  variadic.hpp
burst/algorithm/: counting_sort.hpp  galloping_lower_bound.hpp  galloping_upper_bound.hpp  (+6 more)
cmake/: doctest.cmake  doctest.patch
doc/: CMakeLists.txt  Doxyfile.in  README.md
iterator/: merge_iterator.hpp
online/: CMakeLists.txt  burst-example.py.in  burst_example.cpp  wandbox.py
test/: CMakeLists.txt  output.hpp  output_deque.hpp  output_forward_list.hpp  output_list.hpp  output_set.hpp  output_vector.hpp  test_main.cpp
test/algorithm/: galloping_lower_bound.cpp  galloping_upper_bound.cpp  sum.cpp
test/algorithm/searching/: bitap.cpp  element_position_bitmask_table.cpp
test/algorithm/sorting/: counting_sort.cpp  counting_sort_copy.cpp  radix_sort.cpp  radix_sort_copy.cpp
test/burst/: CMakeLists.txt
test/burst/algorithm/: CMakeLists.txt  copy_at_most_n.cpp  counting_sort.cpp  galloping_lower_bound.cpp  galloping_upper_bound.cpp  next_subsequence.cpp  next_subset.cpp  partial_sum_max.cpp  radix_sort.cpp  select_min.cpp  sum.cpp
test/burst/algorithm/searching/: bitap.cpp  element_position_bitmask_table.cpp
test/burst/algorithm/sorting/: radix_sort.cpp
test/burst/bit/: CMakeLists.txt  bit_cast.cpp
test/burst/container/: CMakeLists.txt  dynamic_tuple.cpp  k_ary_search_set.cpp  make_sequence_container.cpp  make_set.cpp  shaped_array_view.cpp
test/burst/container/access/: CMakeLists.txt  back.cpp  cback.cpp  cfront.cpp  front.cpp
test/burst/functional/: CMakeLists.txt  compose.cpp  each.cpp  fn.cpp  low_byte.cpp  mem_fn.cpp  member.cpp  only.cpp  part.cpp
test/burst/integer/: CMakeLists.txt  bitwise_not.cpp  divceil.cpp  intceil.cpp  intlog.cpp  intlog2.cpp  intpow.cpp  left_shift.cpp  right_shift.cpp  shift_to_unsigned.cpp  to_ordered_integral.cpp  to_unsigned.cpp
test/burst/iterator/: CMakeLists.txt  binary_stream_iterators.cpp  bitap_iterator.cpp  buffered_chunk_iterator.cpp  cache_iterator.cpp  difference_iterator.cpp  intersect_iterator.cpp  join_iterator.cpp  merge_iterator.cpp  owning_iterator.cpp  semiintersect_iterator.cpp  subsequence_iterator.cpp  subset_iterator.cpp  symmetric_difference_iterator.cpp  take_at_most_iterator.cpp  take_exactly_iterator.cpp  take_n_iterator.cpp  union_iterator.cpp  variant_iterator.cpp
test/burst/range/: CMakeLists.txt  bitap.cpp  buffered_chunks.cpp  cache_one.cpp  difference.cpp  intersect.cpp  join.cpp  merge.cpp  own_as_range.cpp  semiintersect.cpp  skip_to_lower_bound.cpp  skip_to_upper_bound.cpp  subsequences.cpp  subsets.cpp  symmetric_difference.cpp  take_at_most.cpp  take_exactly.cpp  take_n.cpp  unite.cpp
test/burst/range/adaptor/: CMakeLists.txt  buffered_chunked.cpp  cached_one.cpp  intersected.cpp  joined.cpp  merged.cpp  owned_as_range.cpp  semiintersected.cpp  symmetric_differenced.cpp  taken_at_most.cpp  taken_exactly.cpp  taken_n.cpp  to_deque.cpp  to_forward_list.cpp  to_list.cpp  to_set.cpp  to_vector.cpp  united.cpp
test/burst/string/: CMakeLists.txt  u8s.cpp
test/burst/tuple/: CMakeLists.txt  apply.cpp  by.cpp  by_all.cpp  get.cpp  view.cpp
test/burst/type_traits/: CMakeLists.txt  minimum_category.cpp  one_of_equal.cpp  signed_integer_of_size.cpp  unsigned_integer_of_size.cpp
test/container/: dynamic_tuple.cpp  k_ary_search_set.cpp  make_sequence_container.cpp  make_set.cpp  make_vector.cpp
test/container/access/: back.cpp  cback.cpp  cfront.cpp  front.cpp
test/functional/: compose.cpp  each.cpp  low_byte.cpp
test/integer/: intlog.cpp  intlog2.cpp  left_shift.cpp  right_shift.cpp
test/iterator/: binary_stream_iterators.cpp  bitap_iterator.cpp  cache_iterator.cpp  difference_iterator.cpp  intersect_iterator.cpp  join_iterator.cpp  merge_iterator.cpp  semiintersect_iterator.cpp  subset_iterator.cpp  take_n_iterator.cpp  union_iterator.cpp
test/math/: intlog.cpp  intlog2.cpp  intpow.cpp
test/output/: deque.hpp  forward_list.hpp  list.hpp  range.hpp  set.hpp  tuple.hpp  vector.hpp
test/range/: bitap.cpp  cache_one.cpp  difference.cpp  intersect.cpp  join.cpp  merge.cpp  semiintersect.cpp  skip_to.cpp  skip_to_lower_bound.cpp  skip_to_upper_bound.cpp  subsets.cpp  take_n.cpp  unite.cpp
test/range/adaptor/: cached_one.cpp  joined.cpp  taken_n.cpp
test/tuple/: apply.cpp  by.cpp  each.cpp  get.cpp  view.cpp
test/utility/: caller_dummies.hpp  counters.hpp  random_vector.hpp  silly_iterator.hpp
test/utility/io/: deque.hpp  forward_list.hpp  initializer_list.hpp  list.hpp  pair.hpp  range.hpp  set.hpp  vector.hpp
tests/: merge_iterator.cpp  test_main.cpp
(+367 files in other folders)
