find_package(Doxygen)
if (Doxygen_FOUND)
    if (NOT DOXYGEN_OUTPUT_LANGUAGE)
        set(DOXYGEN_OUTPUT_LANGUAGE Russian)
    endif()
    message(STATUS "Doxygen documentation will be generated in ${DOXYGEN_OUTPUT_LANGUAGE}")
    configure_file(Doxyfile.in Doxyfile)
    add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
endif ()
